<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_text"
            style="@style/normalText"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=": "
            style="@style/normalText"  />

        <TextView
            android:id="@+id/summaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_text"
            style="@style/normalText"  />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_label_text" />

        <TextView
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_text"
            android:id="@+id/minTempTextView" />

        <TextView
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" - "
            android:id="@+id/textView4" />

        <TextView
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_label_text"
            android:id="@+id/textView2" />

        <TextView
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_text"
            android:id="@+id/maxTempTextView" />
    </LinearLayout>

</LinearLayout>